# Wynd

./: CMakeLists.txt  README.md  resources.qrc  wynd.rc
src/: Main.cpp
src/alerts/: WeatherAlertManager.cpp  WeatherAlertManager.h
src/app/: AppSettings.h
src/layouts/: FlowLayout.cpp  FlowLayout.h
src/location/: locationService.cpp  locationService.h
src/ui/: MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h
src/weather/: WeatherAPI.cpp  WeatherAPI.h
src/widgets/: CurvedSurfaceWidget.cpp  CurvedSurfaceWidget.h  ForecastCard.cpp  ForecastCard.h
styles/: dark.qss  light.qss
